# DOtherSide

./: CMakeLists.txt  appvejor.yml  appveyor.yml
lib/: CMakeLists.txt
lib/include/DOtherSide/: DOtherSide.h
lib/src/: DOtherSide.cpp
test/: CMakeLists.txt  test_dotherside.cpp
